rename refresh functions and merge workspaceFoldersParams