@@ -3,20 +3,18 @@
 
 package com.microsoft.copilot.eclipse.core.lsp.protocol;
 
-import java.util.Collections;
 import java.util.List;
 
 import org.eclipse.lsp4j.WorkspaceFolder;
 
 /**
- * Generic parameters for requests that scan a set of workspace folders, such as the
- * {@code copilot/custom*} list requests.
+ * Generic parameters for language-server requests scoped to a set of workspace folders.
  *
  * @param workspaceFolders the workspace folders to scan
  */
 public record WorkspaceFoldersParams(List<WorkspaceFolder> workspaceFolders) {
-  /** Compact constructor that defaults {@code null} workspace folders to an empty list. */
+  /** Compact constructor that defensively copies the folders, defaulting {@code null} to empty. */
   public WorkspaceFoldersParams {
-    workspaceFolders = workspaceFolders != null ? workspaceFolders : Collections.emptyList();
+    workspaceFolders = workspaceFolders != null ? List.copyOf(workspaceFolders) : List.of();
   }
 }
